--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,23 +1,27 @@
 gitRepoUrl: "https://github.com/cschroed-usgs/EB-99-TEST.git"
 gitRepoCredentialsId: "Jenkins-GitHub-Read-Write-Token"
 docker_build:
+  # Don't specify dockerfile or buildContext
   - artifactoryPath: test_1
     gitlabPath: cschroedl/eb-99
     dockerImageName: test_1
-    dockerFileDirectory: ./test-1
     numberImagesToKeep: 5
+  # Custom dockerfile and buildContext
   - artifactoryPath: test_2
     gitlabPath: cschroedl/eb-99
     dockerImageName: test_2
-    dockerFileDirectory: ./test-2
+    dockerfile: ./test-2/Dockerfile
+    buildContext: .
     numberImagesToKeep: 10
+  # Custom Dockerfile only
   - artifactoryPath: test_3
     gitlabPath: cschroedl/eb-99
     dockerImageName: test_3
-    dockerFileDirectory: ./test-3
+    dockerfile: ./test-3/Dockerfile
     numberImagesToKeep: 2
+  # Custom buildContext only
   - artifactoryPath: test_1
     gitlabPath: cschroedl/eb-99
     dockerImageName: test_4
-    dockerFileDirectory: ./test-4
+    buildContext: ./test-4
     numberImagesToKeep: 2
