--- a/pipeline.yml
+++ b/pipeline.yml
@@ -13,7 +13,7 @@ docker_build:
     dockerfile: ./test-2/Dockerfile
     buildContext: .
     numberImagesToKeep: 10
-  # Custom Dockerfile only
+  # Custom Dockerfile in child directory
   - artifactoryPath: test_3
     gitlabPath: wma/docker/eb-99-test
     dockerImageName: test_3
@@ -25,3 +25,10 @@ docker_build:
     dockerImageName: test_4
     buildContext: ./test-4
     numberImagesToKeep: 2
+  # Custom Dockerfile in current directory
+  - artifactoryPath: test_5
+    gitlabPath: wma/docker/eb-99-test
+    dockerImageName: test_5
+    dockerfile: test-5-dockerfile
+    numberImagesToKeep: 2
+
