--- a/test-3/Dockerfile
+++ b/test-3/Dockerfile
@@ -2,7 +2,7 @@ FROM busybox:1.30.1
 
 LABEL description="THIS IS TEST 3"
 
-COPY test3.txt /test3.txt
+COPY test-3/test3.txt /test3.txt
 
 RUN cat /test3.txt
 
