--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 1.0.0dev
 commit = True
 tag = True
-tag_name = EB-95-TEST-{new_version}
+tag_name = EB-99-TEST-{new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>.*))?
 serialize = 
 	{major}.{minor}.{patch}{release}
