--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,11 +1,11 @@
 [bumpversion]
-current_version = 1.0.0dev
+current_version = 2.0.0-dev
 commit = True
 tag = True
 tag_name = EB-99-TEST-{new_version}
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>.*))?
+parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+)[\-]*)((?P<release>.*))?
 serialize = 
-	{major}.{minor}.{patch}{release}
+	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
