--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,6 +6,7 @@ docker_build:
     gitlabPath: wma/docker/eb-99-test
     dockerImageName: test_1
     numberImagesToKeep: 5
+    deployJobName: EB-99-Test-Deploy
   # Custom dockerfile and buildContext
   - artifactoryPath: test_2
     gitlabPath: wma/docker/eb-99-test
@@ -13,22 +14,26 @@ docker_build:
     dockerfile: ./test-2/Dockerfile
     buildContext: .
     numberImagesToKeep: 10
+    deployJobName: EB-99-Test-Deploy
   # Custom Dockerfile in child directory
   - artifactoryPath: test_3
     gitlabPath: wma/docker/eb-99-test
     dockerImageName: test_3
     dockerfile: ./test-3/Dockerfile
     numberImagesToKeep: 2
+    deployJobName: EB-99-Test-Deploy
   # Custom buildContext only
   - artifactoryPath: test_1
     gitlabPath: wma/docker/eb-99-test
     dockerImageName: test_4
     buildContext: ./test-4
     numberImagesToKeep: 2
+    deployJobName: EB-99-Test-Deploy
   # Custom Dockerfile in current directory
   - artifactoryPath: test_5
     gitlabPath: wma/docker/eb-99-test
     dockerImageName: test_5
     dockerfile: test-5-dockerfile
     numberImagesToKeep: 2
+    deployJobName: EB-99-Test-Deploy
 
